--- a/src/components/Onboarding/Onboarding.css
+++ b/src/components/Onboarding/Onboarding.css
@@ -7,7 +7,6 @@ body {
   justify-content: center;
   height: 100vh;
   position: relative;
-  
 }
 
 /* Onboarding Screen Container */
@@ -86,7 +85,7 @@ body {
   font-size: 24px; /* Adjusted size */
   line-height: 28px;
   font-weight: 500;
-  font-family: Inter;
+  font-family: 'Inter';
   color: #32373a;
   text-align: left;
   display: inline-block;
@@ -111,7 +110,8 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 12px 16px;
+  padding: 12px 16px !important; /* Ensure padding is specific to buttons */
+  margin: 0 !important;          /* Override margin if inherited */
   width: 100%;
   height: 56px;
   border-radius: 100px;
@@ -123,14 +123,43 @@ button {
   text-align: center;
 }
 
+/* Individual Button Styles */
 .continue-button, .google-button {
   background: #1E1548;
   color: #FFFFFF;
+  margin-top: 20px; /* Add custom margin for better spacing */
 }
 
 .later-button, .signup-button, .login-button {
   color: #32373A;
   background: transparent;
+  margin-top: 12px; /* Add a consistent margin between buttons */
+}
+
+/* Spinner styling */
+.spinner-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.loading-spinner {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-left-color: #4caf50;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  animation: spin 1s linear infinite;
+  margin-right: 8px;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 /* Input Field */
@@ -227,32 +256,6 @@ button {
   .onboarding-screen .account-text, 
   .onboarding-screen .details-list {
     font-size: 20px;
-  }
-}
-
-/* Spinner styling */
-.spinner-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.loading-spinner {
-  border: 4px solid rgba(0, 0, 0, 0.1);
-  border-left-color: #4caf50;
-  border-radius: 50%;
-  width: 20px;
-  height: 20px;
-  animation: spin 1s linear infinite;
-  margin-right: 8px;
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
   }
 }
 
